[bugfix] Remove further use of endorsed folder. Closes https://github.com/eXist-db/exist/issues/1671