@@ -59,20 +59,16 @@ set_java_options;
 # save LANG
 set_locale_lang;
 
-JAVA_ENDORSED_DIRS="$EXIST_HOME"/lib/endorsed
-
 PROFILER_OPTS=-agentlib:yjpagent
 
 
 
 if [ "x${yjp_home}" != "x" ]; then
 "${JAVA_RUN}" $JAVA_OPTIONS \
-	-Djava.endorsed.dirs=$JAVA_ENDORSED_DIRS \
 	-Dexist.home=$EXIST_HOME $PROFILER_OPTS \
 	-jar ${EXIST_HOME}/start.jar "$@"
 else
 "${JAVA_RUN}" $JAVA_OPTIONS \
-	-Djava.endorsed.dirs=$JAVA_ENDORSED_DIRS \
 	-Dexist.home=$EXIST_HOME \
 	-jar ${EXIST_HOME}/start.jar "$@"
 fi
